--- a/synthetic-data/generator.ipynb
+++ b/synthetic-data/generator.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "id": "45949d77",
    "metadata": {},
    "outputs": [
@@ -65,15 +65,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "id": "901ede3c",
    "metadata": {},
    "outputs": [],
    "source": [
     "## -- Macros & Initialiser Lists -- ##\n",
     "SEED = 42 # random seed for reproduction\n",
-    "TOTAL = 95359 # total population\n",
-    "TARGET_RATE = 0.533  # homeless population rate\n",
+    "TOTAL = 50000 # total population\n",
+    "TARGET_RATE = 0.1  # homeless population rate\n",
     "\n",
     "genders = ['Male', 'Female']\n",
     "ages = ['0-17', '18-24', '25-34', '35-44', '45-54', '55-64', '65+']\n",
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "id": "75ac28f0",
    "metadata": {},
    "outputs": [],
@@ -113,17 +113,17 @@
     "rng = np.random.default_rng(SEED) # creates random number generator object\n",
     "\n",
     "# Attribute probabilities (Later used in RNG)\n",
-    "gender_p = np.array([0.389, 0.611])\n",
-    "age_counts = np.array([27295, 13804, 15977, 16519, 11576, 6479, 3709], dtype=float)\n",
-    "age_p = age_counts / age_counts.sum()\n",
+    "\n",
+    "gender_p = np.array([0.493, 0.507]) # TODO - Make all use ABS 2021 Census\n",
+    "age_p = np.array([0.216, 0.085, 0.143, 0.137, 0.127, 0.1195, 0.1725], dtype=float) # ABS 2021 Census\n",
     "loc_p = np.array([0.02, 0.35, 0.03, 0.24, 0.09, 0.02, 0.21, 0.04])\n",
     "loc_p = loc_p / loc_p.sum()\n",
     "\n",
     "# Binary feature probabilities (Later used in RNG)\n",
-    "p_drug = 0.14\n",
-    "p_mental = 0.28\n",
-    "p_indigenous = 0.30\n",
-    "p_dv = 0.42\n",
+    "p_drug = 0.164\n",
+    "p_mental = 0.215\n",
+    "p_indigenous = 0.038\n",
+    "p_dv = 0.009\n",
     "\n",
     "# NOTE - random.choice(possible outcomes, generated length, probability)\n",
     "\n",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "id": "5068d59a",
    "metadata": {},
    "outputs": [],
@@ -211,9 +211,9 @@
     "\n",
     "w_gender = float(os.getenv('W_GENDER', '0.08'))       # small effect\n",
     "w_drug = float(os.getenv('W_DRUG', '1.1'))            # tuned up\n",
-    "w_mental = float(os.getenv('W_MENTAL', '0.7'))        # tuned up\n",
-    "w_indigenous = float(os.getenv('W_INDIG', '0.25'))\n",
-    "w_dv = float(os.getenv('W_DV', '1.3'))                # tuned up"
+    "w_mental = float(os.getenv('W_MENTAL', '0.8'))        # tuned up\n",
+    "w_indigenous = float(os.getenv('W_INDIG', '0.5'))\n",
+    "w_dv = float(os.getenv('W_DV', '2.3'))                # tuned up"
    ]
   },
   {
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "id": "6dc46253",
    "metadata": {},
    "outputs": [],
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "id": "9c1290d2",
    "metadata": {},
    "outputs": [],
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "id": "33b85cea",
    "metadata": {},
    "outputs": [],
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "id": "56e4165d",
    "metadata": {},
    "outputs": [
@@ -312,10 +312,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved synthetic dataset to: model/data/synthetic_homelessness_data.csv (n=95,359)\n",
-      "Homeless rate: 53.16% (target 53.30%)\n",
-      "DV sanity (Female): P(H=1|DV=1)=0.690 vs DV=0=0.406\n",
-      "DV sanity (Male): P(H=1|DV=1)=0.704 vs DV=0=0.424\n"
+      "Saved synthetic dataset to: /Users/arona/Documents/GitHub/Visionary-Model/model/data/synthetic_homelessness_data.csv (n=50,000)\n",
+      "Homeless rate: 9.84% (target 10.00%)\n",
+      "DV sanity (Female): P(H=1|DV=1)=0.413 vs DV=0=0.091\n",
+      "DV sanity (Male): P(H=1|DV=1)=0.462 vs DV=0=0.100\n"
      ]
     }
    ],
@@ -344,7 +344,7 @@
     "]\n",
     "df = df[cols]\n",
     "\n",
-    "out_path = Path('model/data/synthetic_homelessness_data.csv')\n",
+    "out_path = Path('/Users/arona/Documents/GitHub/Visionary-Model/model/data/synthetic_homelessness_data.csv')\n",
     "out_path.parent.mkdir(parents=True, exist_ok=True)\n",
     "df.to_csv(out_path, index=False)\n",
     "\n",
